package ir.ac.kntu.model.Soldiers;

/**
 * @author TOP
 */
public class Archer extends Soldier {

    /**
     *
     */
    public Archer() {
        super(300, SoldierType.RANGE, 15, 1, 200, 2);
    }
}
