package ir.ac.kntu.model.Soldiers;

/**
 * @author TOP
 */
public class Dragon extends Soldier {

    /**
     *
     */
    public Dragon() {
        super(500, SoldierType.RANGE, 500, 2, 350, 3);
    }
}
