package ir.ac.kntu.model.Soldiers;

/**
 * @author TOP
 */
public class Goblin extends Soldier {

    /**
     *
     */
    public Goblin() {
        super(200, SoldierType.MELEE, 10, 3, 250, 1);
    }
}
