package ir.ac.kntu.model.Soldiers;

/**
 * @author TOP
 */
public class Knight extends Soldier {

    /**
     *
     */
    public Knight() {
        super(600, SoldierType.MELEE, 30, 2, 400, 1);
    }
}
