package ir.ac.kntu.model.Soldiers;

/**
 * @author TOP
 */
public class Shield extends Soldier {

    /**
     *
     */
    public Shield() {
        super(1000, SoldierType.MELEE, 10, 1, 150, 1);
    }
}
