package ir.ac.kntu.model.Soldiers;

import java.io.Serializable;

/**
 * @author TOP
 */
public enum SoldierType implements Serializable {

    /**
     *
     */
    MELEE,

    /**
     *
     */
    RANGE
}
