package ir.ac.kntu.model.Soldiers;

/**
 * @author TOP
 */
public class Swordsman extends Soldier {

    /**
     *
     */
    public Swordsman() {
        super(500, SoldierType.MELEE, 20, 1, 350, 1);
    }
}
