package ir.ac.kntu.model.Soldiers;

/**
 * @author TOP
 */
public class Wizard extends Soldier {

    /**
     *
     */
    public Wizard() {
        super(300, SoldierType.RANGE, 20, 1, 300, 2);
    }
}
