@startuml

title __SOLDIERS's Class Diagram__\n

  package ir.ac.kntu.model {
    package ir.ac.kntu.model.Soldiers {
      class Archer {
          + Archer()
      }
    }
  }
  

  package ir.ac.kntu.model {
    package ir.ac.kntu.model.Soldiers {
      class Dragon {
          + Dragon()
      }
    }
  }
  

  package ir.ac.kntu.model {
    package ir.ac.kntu.model.Soldiers {
      class Goblin {
          + Goblin()
      }
    }
  }
  

  package ir.ac.kntu.model {
    package ir.ac.kntu.model.Soldiers {
      class Knight {
          + Knight()
      }
    }
  }
  

  package ir.ac.kntu.model {
    package ir.ac.kntu.model.Soldiers {
      class Shield {
          + Shield()
      }
    }
  }
  

  package ir.ac.kntu.model {
    package ir.ac.kntu.model.Soldiers {
      class Soldier {
          {static} - serialVersionUID : long
          - cost : int
          - speed : int
          - damage : int
          - range : int
          - health : int
          - isActive : boolean
          - location : Pair<Integer, Integer>
          + Soldier()
          + getCost()
          + getSpeed()
          + getDamage()
          + getRange()
          + getSoldierType()
          + toString()
          + isActive()
          + setActive()
          + getLocation()
          + setLocation()
          + getHealth()
          + setHealth()
      }
    }
  }
  

  package ir.ac.kntu.model {
    package ir.ac.kntu.model.Soldiers {
      enum SoldierKind {
        GOBLIN
        SHIELD
        SWORDSMAN
        KNIGHT
        ARCHER
        WIZARD
        DRAGON
        NON
      }
    }
  }
  

  package ir.ac.kntu.model {
    package ir.ac.kntu.model.Soldiers {
      enum SoldierType {
        MELEE
        RANGE
      }
    }
  }
  

  package ir.ac.kntu.model {
    package ir.ac.kntu.model.Soldiers {
      class Swordsman {
          + Swordsman()
      }
    }
  }
  

  package ir.ac.kntu.model {
    package ir.ac.kntu.model.Soldiers {
      class Wizard {
          + Wizard()
      }
    }
  }
  

  Archer -up-|> Soldier
  Dragon -up-|> Soldier
  Goblin -up-|> Soldier
  Knight -up-|> Soldier
  Shield -up-|> Soldier
  Soldier -up-|> Serializable
  Soldier o-- SoldierType : soldierType
  SoldierKind -up-|> Serializable
  SoldierType -up-|> Serializable
  Swordsman -up-|> Soldier
  Wizard -up-|> Soldier


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
